Person page image now shown with *max* instead of *fixed* width and height, so it doesn't unnecessarily get distorted.

--- a/style/general.css
+++ b/style/general.css
@@ -221,3 +221,8 @@ dd {
 img {
   border: 0px;
 }
+
+img.person {
+  max-width:  600px;
+  max-height: 300px;
+}
